k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rick-morty-backend
  namespace: rick-morty
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.rick-morty.welt-on.com
      secretName: rick-morty-backend-tls
  rules:
    - host: api.rick-morty.welt-on.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rick-morty-backend
                port:
                  number: 80
